--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -35,7 +35,7 @@
                 <div data-th-replace="fragments/fragment-menu-profile-quick-info :: menu-profile-quick-info"></div>
                 <!-- /menu profile quick info -->
 
-                <br />
+                <br/>
 
                 <!-- sidebar menu -->
                 <div data-th-replace="fragments/fragment-sidebar-menu :: sidebar-menu"></div>
@@ -53,7 +53,7 @@
         <!-- /top navigation -->
 
         <!-- page content -->
-        <div class="right_col" role="main" data-layout-fragment="content"></div>
+        <div data-layout-fragment="content"></div>
         <!-- /page content -->
 
         <!-- footer content -->
