--- a/src/main/resources/templates/fragments/fragment-sidebar-menu.html
+++ b/src/main/resources/templates/fragments/fragment-sidebar-menu.html
@@ -72,9 +72,9 @@
                     <li><a href="#page_403.html">403 Error</a></li>
                     <li><a href="#page_404.html">404 Error</a></li>
                     <li><a href="#page_500.html">500 Error</a></li>
-                    <li><a href="#plain_page.html">Plain Page</a></li>
+                    <li><a data-th-href="@{/plain-page}">Plain Page</a></li>
                     <li><a href="#login.html">Login Page</a></li>
-                    <li><a href="#pricing_tables.html">Pricing Tables</a></li>
+                    <li><a data-th-href="@{pricing-tables}">Pricing Tables</a></li>
                 </ul>
             </li>
             <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
